<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <!-- Gallary show ( 1+3 show ) -->
    <RelativeLayout 
        android:id="@+id/rl_gallery"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:visibility="gone">
        
        <ImageSwitcher 
            android:id="@+id/gallery_ivs_main"
            android:layout_width="950dp"
            android:layout_height="match_parent"
            android:background="#000000">
        </ImageSwitcher>
        
        <RelativeLayout 
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">
            
            <ImageSwitcher 
                android:id="@+id/gallery_ivs_top"
                android:layout_width="300dp"
                android:layout_height="210dp"
                android:scaleType="center"
                android:background="#009999">
            </ImageSwitcher>
            
            <ImageSwitcher 
                android:id="@+id/gallery_ivs_mid"
                android:layout_width="300dp"
                android:layout_height="210dp"
                android:scaleType="center"
                android:layout_centerVertical="true"
                android:background="#009999">
            </ImageSwitcher>
            
            <ImageSwitcher 
                android:id="@+id/gallery_ivs_bottom"
                android:layout_width="300dp"
                android:layout_height="210dp"
                android:layout_alignParentBottom="true"
                android:scaleType="center"
                android:background="#009999">
            </ImageSwitcher>
            
        </RelativeLayout>
        
    </RelativeLayout>
 		
    <!-- Fit screen show -->
    <RelativeLayout 
        android:id="@+id/rl_photo_fit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ImageSwitcher
	        android:id="@+id/photo_ivs_fit"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent" />
    </RelativeLayout>
    
       
    <!-- Fill screen show -->
    <RelativeLayout
        android:id="@+id/rl_photo_fill"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone"  >

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none" >

            <HorizontalScrollView
                android:id="@+id/hscroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none">
				
                <LinearLayout
	                android:id="@+id/mlayout"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:orientation="vertical" >
	                
	                <ImageView 
	                    android:id="@+id/photo_iv_fill"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"/>
	                
                </LinearLayout>
            </HorizontalScrollView>
        </ScrollView>
    </RelativeLayout>

    <!-- Settings panel -->
    <RelativeLayout
        android:id="@+id/rl_settings"
        android:layout_width="380dp"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:background="@drawable/settings_item_noselected"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvset_date_time"
                style="@style/tv_set_theme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:text="Date and Time" />
            
            <TextView
                android:id="@+id/tvset_auto_power"
                style="@style/tv_set_theme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:text="Auto Power"/>
            
            <TextView
                android:id="@+id/tvset_language"
                style="@style/tv_set_theme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:text="Language" />

            <TextView
                android:id="@+id/tvset_brightness"
                style="@style/tv_set_theme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:text="Brightness" />

            <TextView
                android:id="@+id/tvset_split"
                style="@style/tv_set_theme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:text="Split Slideshow" />

            <TextView
                android:id="@+id/tvset_interval"
                style="@style/tv_set_theme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:text="Slideshow interval" />

            <TextView
                android:id="@+id/tvset_transition"
                style="@style/tv_set_theme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:text="Slideshow Transition" />

            <TextView
                android:id="@+id/tvset_shuffle"
                style="@style/tv_set_theme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:text="Slideshow Shuffle" />

            <TextView
                android:id="@+id/tvset_photo_info"
                style="@style/tv_set_theme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:text="Photo Info" />
            
            <TextView
                android:id="@+id/tvset_photo_fit"
                style="@style/tv_set_theme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:text="Photo Fit" />

            <TextView
                android:id="@+id/tvset_version"
                style="@style/tv_set_theme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:text="About DPF" />

            <TextView
                android:id="@+id/tvset_reset"
                style="@style/tv_set_theme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:text="Reset" />
        </LinearLayout>
    </RelativeLayout>

    <!-- Date time panel -->
    <RelativeLayout
        android:id="@+id/rl_date_time"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@drawable/settings_item_noselected"
        android:gravity="center"
        android:visibility="gone" >

        <RelativeLayout 
            android:id="@+id/rl_current_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="150dp"
            android:gravity="center">
           
            <ImageView 
                android:id="@+id/ivdate_left"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:src="@drawable/date_left"/>
	        <TextView
	            android:id="@+id/tvCurrentDate"
	            android:layout_width="250dp"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@+id/ivdate_left"
	            android:layout_centerVertical="true"
	            android:gravity="center"
	            android:text="loding..."
	            android:textColor="@android:color/white"
	            android:textSize="35sp" />
	        
	        <ImageView 
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tvCurrentDate"
                android:src="@drawable/date_right"/>
        </RelativeLayout>

        <TableLayout
            android:id="@+id/tablelayout"
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:layout_below="@+id/rl_current_date"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="40dip" >

            <TableRow>

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/sunday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/monday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/thesday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/wednesday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/thursday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/friday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/saturday"
                    android:textColor="@color/canlendar_text_color" />
            </TableRow>
        </TableLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_calendar"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@+id/tablelayout" >
        </android.support.v4.view.ViewPager>
        
        <RelativeLayout 
	        android:layout_width="180dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/vp_calendar"
	        android:layout_centerHorizontal="true"
	        android:gravity="center">
	        
		    <TextClock
		        android:id="@+id/textclock_time1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@android:color/white"
	            android:textSize="50sp"
	            android:format12Hour="h:mm"/>
	
		    <TextClock
		        android:id="@+id/textclock_aa1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/textclock_time1"
		        android:layout_toRightOf="@+id/textclock_time1"
		        android:layout_marginLeft="10dp"
		        android:format12Hour="aa"
		        android:textColor="@android:color/white"
		        android:textSize="25sp" />
	
	    </RelativeLayout>
    </RelativeLayout>
	
    <!-- TextClock 组合控件 -->
    <RelativeLayout 
        android:id="@+id/rl_textclock"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:background="#66000000"
        android:visibility="gone">
        
	    <TextClock
            android:id="@+id/textclock_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:gravity="center"
            android:format12Hour="h:mm"/>

	    <TextClock
	        android:id="@+id/textclock_aa"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/textclock_time"
	        android:layout_toRightOf="@+id/textclock_time"
	        android:layout_marginLeft="10dp"
	        android:format12Hour="aa"
	        android:gravity="center"
	        android:textColor="@android:color/white"
	        android:textSize="25sp" />

    </RelativeLayout>
    
</RelativeLayout>